--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -264,16 +264,22 @@
   <data name="System default" xml:space="preserve">
     <value>System default</value>
   </data>
-  <data name="Application language changed" xml:space="preserve">
-    <value>Application language changed</value>
+  <data name="Added" xml:space="preserve">
+    <value>Added</value>
   </data>
-  <data name="The application needs to be restarted for the language change to take effect." xml:space="preserve">
-    <value>The application needs to be restarted for the language change to take effect.</value>
+  <data name="Removed" xml:space="preserve">
+    <value>Removed</value>
   </data>
-  <data name="Restart" xml:space="preserve">
-    <value>Restart</value>
+  <data name="Changed" xml:space="preserve">
+    <value>Changed</value>
   </data>
-  <data name="Restart later" xml:space="preserve">
-    <value>Restart later</value>
+  <data name="Fixed" xml:space="preserve">
+    <value>Fixed</value>
+  </data>
+  <data name="Improved" xml:space="preserve">
+    <value>Improved</value>
+  </data>
+  <data name="Updated" xml:space="preserve">
+    <value>Updated</value>
   </data>
 </root>
