--- a/eTools Ultimate/Resources/Translations.resx
+++ b/eTools Ultimate/Resources/Translations.resx
@@ -378,4 +378,7 @@
     <value>No model associated with the selected mover.</value>
     <comment>No model associated message</comment>
   </data>
+  <data name="AIs assigned to {0}" xml:space="preserve">
+    <value />
+  </data>
 </root>
