--- a/eTools Ultimate/Resources/Translations.fr-FR.resx
+++ b/eTools Ultimate/Resources/Translations.fr-FR.resx
@@ -617,8 +617,8 @@
     <value>Naviguer vers l'éditeur de tickets.</value>
     <comment>Tickets navigation card description</comment>
   </data>
-  <data name="Navigate to the text client." xml:space="preserve">
-    <value>Naviguer vers le client texte.</value>
+  <data name="Navigate to the texts page." xml:space="preserve">
+    <value>Naviguer vers la page des textes.</value>
     <comment>Text Client navigation card description</comment>
   </data>
   <data name="ID" xml:space="preserve">
