--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -282,10 +282,6 @@
     <value>Sound</value>
     <comment>Sound section header</comment>
   </data>
-  <data name="Define ID" xml:space="preserve">
-    <value>ID definieren</value>
-    <comment>Define ID field label</comment>
-  </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
     <comment>Name field label</comment>
@@ -1681,9 +1677,6 @@
   <data name="Retry" xml:space="preserve">
     <value>Wiederholen</value>
   </data>
-  <data name="Define ID of the mover" xml:space="preserve">
-    <value>ID des Movers definieren</value>
-  </data>
   <data name="Name of the mover" xml:space="preserve">
     <value>Name des Movers</value>
   </data>
@@ -1994,6 +1987,18 @@
     <value />
   </data>
   <data name="Texts" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="ID of the mover" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Motion" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Motion of the character mover that should be played." type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="Text" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
 </root>
